# FOOTBALL-ANALYSIS

./: .gitignore  README.md  main.py  models.dvc  output_videos.dvc  pyproject.toml  runs.dvc  stubs.dvc  yolo_inference.py
trackers/: tracker.py
training/: .gitignore  football-players-detection-1.dvc  football_training.ipynb
utils/: bbox_utils.py  video_utils.py
