[project]
name = "football-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "ipykernel>=7.1.0",
    "opencv-python>=4.11.0.86",
    "pandas>=3.0.0",
    "roboflow>=1.2.11",
    "scikit-learn>=1.8.0",
    "supervision>=0.27.0",
    "ultralytics>=8.3.252",
]
